--- a/Views/Products/Detials.cshtml
+++ b/Views/Products/Detials.cshtml
@@ -1,4 +1,7 @@
-﻿@model MvcDebuggingExam.Models.Product
+﻿@{
+    Layout = "_Layout";
+}
+@model MvcDebuggingExam.Models.Product
 
 @{
     ViewData["Title"] = "Product Details";
